src/objects/Accounting_Reconciliation__c.object
<CustomObject>
    <fields>
        <fullName>AP_Inventory_Return_Approved__c</fullName>
	    <label>AP Inventory Return Approved</label>
	    <precision>18</precision>
	    <scale>2</scale>
	    <type>Currency</type>
    </fields>
    <fields>
        <fullName>AP_Inventory_VR_Stocked__c</fullName>
	    <label>AP Inventory VR Stocked</label>
	    <precision>18</precision>
	    <scale>2</scale>
	    <type>Currency</type>
    </fields>
    <fields>
        <fullName>Blackpurl_Balance__c</fullName>
	    <inlineHelpText>Balance in blackpurl</inlineHelpText>
	    <label>Blackpurl Balance</label>
	    <precision>18</precision>
	    <scale>2</scale>
	    <type>Currency</type>
    </fields>
    <fields>
        <fullName>GL_Account_ID__c</fullName>
	    <label>GL Account ID</label>
	    <length>255</length>
	    <type>Text</type>
    </fields>
    <fields>
	    <fullName>GL_Account_Name__c</fullName>
	    <label>GL Account Name</label>
	    <length>255</length>
	    <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Account_Number__c</fullName>
	    <label>GL Account Number</label>
	    <length>255</length>
	    <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Balance__c</fullName>
	    <inlineHelpText>Balance in GL</inlineHelpText>
	    <label>GL Balance</label>
	    <precision>18</precision>
	    <scale>2</scale>
	    <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounting_Reconciliations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Number_of_BP_records__c</fullName>
	    <label>Number of BP records</label>
	    <precision>18</precision>
	    <scale>0</scale>
	    <type>Number</type>
    </fields>
    <fields>
        <fullName>Parts_Instock_Cost__c</fullName>
	    <inlineHelpText>This is the total cost on part record</inlineHelpText>
	    <label>Parts Instock Cost</label>
	    <precision>18</precision>
	    <scale>2</scale>
	    <type>Currency</type>
    </fields>
    <fields>
        <fullName>Parts_Instock_Qty__c</fullName>
	    <label>Parts Instock Qty</label>
	    <precision>18</precision>
	    <scale>2</scale>
	    <type>Number</type>
    </fields>
    <fields>
        <fullName>Parts_Oversold_Cost__c</fullName>
	    <label>Parts Oversold Cost</label>
	    <precision>18</precision>
	    <scale>2</scale>
	    <type>Currency</type>
    </fields>
    <fields>
        <fullName>Parts_Oversold_Qty__c</fullName>
	    <label>Parts Oversold Qty</label>
	    <precision>18</precision>
	    <scale>2</scale>
	    <type>Number</type>
    </fields>
    <fields>
        <fullName>Reconciliation_Date__c</fullName>
	    <label>Reconciliation Date</label>
	    <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
	    <inlineHelpText>Reconciliation account type</inlineHelpText>
	    <label>Type</label>
	    <type>Picklist</type>
	    <valueSet>
	        <valueSetDefinition>
	            <value>
	                <fullName>Parts</fullName>
	            </value>
	            <value>
	                <fullName>Units</fullName>
	            </value>
	            <value>
	                <fullName>Deposits</fullName>
	            </value>
	            <value>
	                <fullName>WIP Labor</fullName>
	            </value>
	            <value>
	                <fullName>AP Inventory</fullName>
	            </value>
	            <value>
	                <fullName>Store credit</fullName>
	            </value>
	            <value>
	                <fullName>Stocked Trade</fullName>
	            </value>
	            <value>
	                <fullName>Deal Option</fullName>
	            </value>
	            <value>
	                <fullName>Deductible</fullName>
	            </value>
	        </valueSetDefinition>
	    </valueSet>
    </fields>
    <fields>
        <fullName>Units_Deal_Options_WIP__c</fullName>
	    <label>Units Deal Options WIP</label>
	    <precision>18</precision>
	    <scale>2</scale>
	    <type>Currency</type>
    </fields>
    <fields>
	    <fullName>Units_Instock_Cost__c</fullName>
	    <label>Units Instock Cost</label>
	    <precision>18</precision>
	    <scale>2</scale>
	    <type>Currency</type>
    </fields>
    <fields>
	    <fullName>Variance__c</fullName>
	    <formula>Blackpurl_Balance__c - GL_Balance__c</formula>
	    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
	    <label>Variance</label>
	    <precision>18</precision>
	    <scale>2</scale>
	    <type>Currency</type>
    </fields>
    <fields>
        <fullName>Variance_Change__c</fullName>
        <description>Variance for current date minus variance from previous date.</description>
        <inlineHelpText>Variance for current date minus variance from previous date.</inlineHelpText>
        <label>Variance Change</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
	    <fullName>WIP_Hours_Logged__c</fullName>
	    <label>WIP Hours Logged</label>
	    <precision>18</precision>
	    <scale>2</scale>
	    <type>Number</type>
    </fields>
    <label>Accounting Reconciliation</label>
    <listViews>
        <fullName>AP_inventory_recs</fullName>
        <columns>NAME</columns>
        <columns>Reconciliation_Date__c</columns>
        <columns>Type__c</columns>
        <columns>GL_Account_Number__c</columns>
        <columns>GL_Account_Name__c</columns>
        <columns>Number_of_BP_records__c</columns>
        <columns>Blackpurl_Balance__c</columns>
        <columns>GL_Balance__c</columns>
        <columns>Variance__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>AP Inventory</value>
        </filters>
        <label>AP inventory recs</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Reconciliation_Date__c</columns>
        <columns>Type__c</columns>
        <columns>GL_Account_Number__c</columns>
        <columns>Number_of_BP_records__c</columns>
        <columns>Blackpurl_Balance__c</columns>
        <columns>GL_Balance__c</columns>
        <columns>Variance__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Non_Zero_Variance</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>Reconciliation_Date__c</columns>
        <columns>Type__c</columns>
        <columns>GL_Account_Number__c</columns>
        <columns>GL_Account_Name__c</columns>
        <columns>Number_of_BP_records__c</columns>
        <columns>Blackpurl_Balance__c</columns>
        <columns>GL_Balance__c</columns>
        <columns>Variance__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Variance__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </filters>
        <label>Non-Zero Variance</label>
    </listViews>
    <listViews>
        <fullName>Deal_option_recs</fullName>
        <columns>NAME</columns>
        <columns>Reconciliation_Date__c</columns>
        <columns>Type__c</columns>
        <columns>GL_Account_Number__c</columns>
        <columns>GL_Account_Name__c</columns>
        <columns>Number_of_BP_records__c</columns>
        <columns>Blackpurl_Balance__c</columns>
        <columns>GL_Balance__c</columns>
        <columns>Variance__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Deal Option</value>
        </filters>
        <label>Deal option recs</label>
    </listViews>
    <listViews>
        <fullName>Deductible_recs</fullName>
        <columns>NAME</columns>
        <columns>Reconciliation_Date__c</columns>
        <columns>Type__c</columns>
        <columns>GL_Account_Number__c</columns>
        <columns>GL_Account_Name__c</columns>
        <columns>Number_of_BP_records__c</columns>
        <columns>Blackpurl_Balance__c</columns>
        <columns>GL_Balance__c</columns>
        <columns>Variance__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Deductible</value>
        </filters>
        <label>Deductible recs</label>
    </listViews>
    <listViews>
        <fullName>Deposits_recs</fullName>
        <columns>NAME</columns>
        <columns>Reconciliation_Date__c</columns>
        <columns>Type__c</columns>
        <columns>GL_Account_Number__c</columns>
        <columns>GL_Account_Name__c</columns>
        <columns>Number_of_BP_records__c</columns>
        <columns>Blackpurl_Balance__c</columns>
        <columns>GL_Balance__c</columns>
        <columns>Variance__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Deposits</value>
        </filters>
        <label>Deposits recs</label>
    </listViews>
    <listViews>
        <fullName>Parts_recs</fullName>
        <columns>NAME</columns>
        <columns>Reconciliation_Date__c</columns>
        <columns>Type__c</columns>
        <columns>GL_Account_Number__c</columns>
        <columns>GL_Account_Name__c</columns>
        <columns>Number_of_BP_records__c</columns>
        <columns>Blackpurl_Balance__c</columns>
        <columns>GL_Balance__c</columns>
        <columns>Variance__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Parts</value>
        </filters>
        <label>Parts recs</label>
    </listViews>
    <listViews>
        <fullName>Specific_type</fullName>
        <columns>NAME</columns>
        <columns>Reconciliation_Date__c</columns>
        <columns>Type__c</columns>
        <columns>GL_Account_Number__c</columns>
        <columns>Number_of_BP_records__c</columns>
        <columns>Blackpurl_Balance__c</columns>
        <columns>GL_Balance__c</columns>
        <columns>Variance__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Parts</value>
        </filters>
        <label>Specific type</label>
    </listViews>
    <listViews>
        <fullName>Stocked_trade_recs</fullName>
        <columns>NAME</columns>
        <columns>Reconciliation_Date__c</columns>
        <columns>Type__c</columns>
        <columns>GL_Account_Number__c</columns>
        <columns>GL_Account_Name__c</columns>
        <columns>Number_of_BP_records__c</columns>
        <columns>Blackpurl_Balance__c</columns>
        <columns>GL_Balance__c</columns>
        <columns>Variance__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Stocked Trade</value>
        </filters>
        <label>Stocked trade recs</label>
    </listViews>
    <listViews>
        <fullName>Store_credit_recs</fullName>
        <columns>NAME</columns>
        <columns>Reconciliation_Date__c</columns>
        <columns>Type__c</columns>
        <columns>GL_Account_Number__c</columns>
        <columns>GL_Account_Name__c</columns>
        <columns>Number_of_BP_records__c</columns>
        <columns>Blackpurl_Balance__c</columns>
        <columns>GL_Balance__c</columns>
        <columns>Variance__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Store credit</value>
        </filters>
        <label>Store credit recs</label>
    </listViews>
    <listViews>
        <fullName>Units_recs</fullName>
        <columns>NAME</columns>
        <columns>Reconciliation_Date__c</columns>
        <columns>Type__c</columns>
        <columns>GL_Account_Number__c</columns>
        <columns>GL_Account_Name__c</columns>
        <columns>Number_of_BP_records__c</columns>
        <columns>Blackpurl_Balance__c</columns>
        <columns>GL_Balance__c</columns>
        <columns>Variance__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Units</value>
        </filters>
        <label>Units recs</label>
    </listViews>
    <listViews>
        <fullName>WIP_labor_recs</fullName>
        <columns>NAME</columns>
        <columns>Reconciliation_Date__c</columns>
        <columns>Type__c</columns>
        <columns>GL_Account_Number__c</columns>
        <columns>GL_Account_Name__c</columns>
        <columns>Number_of_BP_records__c</columns>
        <columns>Blackpurl_Balance__c</columns>
        <columns>GL_Balance__c</columns>
        <columns>Variance__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>WIP Labor</value>
        </filters>
        <label>WIP labor recs</label>
    </listViews>
    <nameField>
        <displayFormat>AREC-{00000000}</displayFormat>
        <label>Accounting Reconciliation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accounting Reconciliations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>